--- a/WebBellwether.Web/app/jokes/managementJokes.html
+++ b/WebBellwether.Web/app/jokes/managementJokes.html
@@ -62,7 +62,7 @@
                     <div ng-repeat="al in joke.jokeTranslations" class="inline-block">
                         <div>
                             <h5>
-                                <span style="margin-left: 4px" ng-class="al.hasTranslation ? 'label label-success' : 'label label-danger'"><span class={{al.language.languageFlag}}></span>{{al.language.languageShortName}}</span>
+                                <span style="margin-left: 4px" ng-class="al.hasTranslation ? 'label label-success' : 'label label-danger'">{{al.language.languageShortName}}</span>
                             </h5>
                         </div>
                     </div>
