--- a/WebBellwether.Web/app/languages/managementLanguages.html
+++ b/WebBellwether.Web/app/languages/managementLanguages.html
@@ -61,7 +61,7 @@
                     <!--TRANSLATE ALL KEYS-->
                     <div class="form-group">
                         <label>{{translation.TranslateAllLanguageKeys}}</label>
-                        <button ng-click="translateAllLanguageKeysDialog()" ng-hide="languageForEdit.id == selectedLanguage" class="btn btn-primary btn-block formAni"><span class="mif-cloud-download mif-2x"></span></button>
+                        <button ng-click="translateAllLanguageKeysDialog()" ng-hide="languageForEdit.id == selectedLanguage" class="btn btn-primary btn-block formAni"><span class="mif-cloud-download mif-2x"> {{translation.Translate}}</span></button>
                     </div>
 
                 </form>
