--- a/WebBellwether.Web/app/jokes/managementJokeCategories.html
+++ b/WebBellwether.Web/app/jokes/managementJokeCategories.html
@@ -33,11 +33,11 @@
         <div ng-hide="selectedJokeCategory == ''">
             <h2 style="text-align:left">{{translation.OtherTranslationForTheCurrentlySelectedJokeCategoryAndLanguage}}</h2>
 
-            <select id="language" ng-change="getTranslationForJokeCategory()" class="form-control myFormColor" required data-ng-model="languageForOtherTranslation" data-ng-options="language.languageName + '   :   ' + language.languageShortName for language in languages | filter : { id : '!' + selectedLanguage}">
+            <select id="language" ng-change="getTranslationForJokeCategory()" class="form-control myFormColor" required data-ng-model="languageForOtherTranslation" data-ng-options="language.languageName + '   :   ' + language.languageShortName for language in languages | filterByIdTakeWhenNotExists : selectedLanguage">
                 <option value=''>{{translation.SelectLanguageForTheJokeCategory}}</option>
             </select>
 
-            <div ng-hide="languageForOtherTranslation == ''" class="formAni">
+            <div ng-hide="languageForOtherTranslation == null" class="formAni">
                 <form name="otherJokeCategoryTranslation">
                     <input type="text" class="form-control myFormColor" required data-ng-model="selectedJokeCategoryTranslation.jokeCategoryName" placeholder={{translation.CategoryName}} />                    
                 </form>
