--- a/WebBellwether.Web/app/jokes/managementJokes.html
+++ b/WebBellwether.Web/app/jokes/managementJokes.html
@@ -33,10 +33,10 @@
     <div class="col-md-4">
         <div ng-hide="selectedJoke == ''">
             <h2 style="text-align:left">{{translation.OtherTranslationForTheCurrentlySelectedJokeAndLanguage}}</h2>
-            <select id="language" ng-change="getTranslationForJoke()" class="form-control myFormColor" required data-ng-model="languageForOtherTranslation" ng-options="language.languageName + '   :   ' + language.languageShortName for language in languages | filter : {id: '!' + selectedLanguage}">
+            <select id="language" ng-change="getTranslationForJoke()" class="form-control myFormColor" required data-ng-model="languageForOtherTranslation" ng-options="language.languageName + '   :   ' + language.languageShortName for language in languages | filterByIdTakeWhenNotExists : selectedLanguage">
                 <option value=''>{{translation.SelectLanguageForTheJoke}}</option>
             </select>
-            <div ng-hide="languageForOtherTranslation == ''" class="formAni">
+            <div ng-hide="languageForOtherTranslation == null" class="formAni">
                 <textarea class="form-control myFormColor" rows="16" required data-ng-model="selectedJokeTranslation.jokeContent" placeholder="{{translation.JokeContent}}"></textarea>
                 <label style="margin-top:20px;margin-bottom:20px;text-align:left">{{translation.AutoCompleteJokeCategoryForLanguage}}</label>
                 <!--TRANSLATE JOKE-->
