--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -16,13 +16,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
 <body data-ng-app="webBellwether" data-ng-controller="translationController">
-    <!--<video autoplay loop poster="/appData/videos/CloudFly.jpg" id="bgvid">
+    <video autoplay loop poster="/appData/videos/CloudFly.jpg" id="bgvid">
 
         <source src="/appData/videos/CloudFly.webm" type="video/webm">
 
         <source src="/appData/videos/CloudFly.mp4" type="video/mp4">
 
-    </video>-->
+    </video>
     <div data-ng-controller="indexController" role="navigation">
 
         <!--Header-->
@@ -34,7 +34,7 @@
         </div>
 
         <!--Footer-->
-        <div style="margin-top: 50px;">
+        <div>
             <div ng-include src="'/app/home/footer.html'"></div>
         </div>
     </div>
